--- a/serviceapifw_plat/liw_criteria_api/tsrc/conf/tliwtestcases.cfg
+++ b/serviceapifw_plat/liw_criteria_api/tsrc/conf/tliwtestcases.cfg
@@ -377,3 +377,99 @@ create liwtestcases foobar
 foobar LIW_ASYNC_004
 delete foobar
 [Endtest] 
+[Test]
+title LIW_ASYNC_LongServiceCmd
+create liwtestcases foobar
+foobar LIW_ASYNC_LongServiceCmd
+delete foobar
+[Endtest] 
+
+[Test]
+title LIW_ASYNC_LongInterface
+create liwtestcases foobar
+foobar LIW_ASYNC_LongInterface
+delete foobar
+[Endtest] 
+
+[Test]
+title LIW_ASYNC_LongInterface1
+create liwtestcases foobar
+foobar LIW_ASYNC_LongInterface1
+delete foobar
+[Endtest] 
+
+[Test]
+title LIW_ASYNC_LongInvalidServiceCmd
+create liwtestcases foobar
+foobar LIW_ASYNC_LongInvalidServiceCmd
+delete foobar
+[Endtest] 
+
+[Test]
+title LIW_ASYNC_LongInvalidInterface
+create liwtestcases foobar
+foobar LIW_ASYNC_LongInvalidInterface
+delete foobar
+[Endtest]
+
+[Test]
+title LIW_ParamCleanup1
+create liwtestcases foobar
+foobar LIW_ParamCleanup1
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_GetInterest
+create liwtestcases foobar
+foobar LIW_GetInterest
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_Defaut_list_externalize
+create liwtestcases foobar
+foobar LIW_Defaut_list_externalize
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_DATA_TYPES_013_A
+create liwtestcases foobar
+foobar LIW_DATA_TYPES_013_A
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_DATA_TYPES_015_A
+create liwtestcases foobar
+foobar LIW_DATA_TYPES_015_A
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_DATA_TYPES_015
+create liwtestcases foobar
+foobar LIW_DATA_TYPES_015
+delete foobar
+[Endtest]
+
+
+[Test]
+title LIW_DATA_GenericParamList
+create liwtestcases foobar
+foobar LIW_DATA_GenericParamList
+delete foobar
+[Endtest]
+
+[Test]
+title LIW_DATA_NewLOverLoad
+create liwtestcases foobar
+foobar LIW_DATA_NewLOverLoad
+delete foobar
+[Endtest]
